sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var i : Int;
            ^AlgCombSort:21: error: value ++ is not a member of Int
			i++;
                         ^